Fix button alignment in homepage

--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -89,3 +89,9 @@
   max-height: 700px;
   max-width: 100%;
 }
+@media (max-width:765px){
+  .row1{
+    display: flex;
+    justify-content: center;
+  } 
+}
